--- a/views/actor_create.html
+++ b/views/actor_create.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Crear actor HTML</h1>
     <form action="/author/create" method="post">
         <fieldset>
             <legend>Actor</legend>
