--- a/views/index.jade
+++ b/views/index.jade
@@ -5,4 +5,4 @@ block content
   p #{date}
   p Welcome to #{title}
   p
-    a(href="/authors") Lista de actores
+    a(href="/authors") Lista de actores /authors
