--- a/views/actor_delete.html
+++ b/views/actor_delete.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Eliminar actor HTML</h1>
     <form action="/author/{{id}}/delete" method="post">
         <fieldset>
             <legend>Actor</legend>
